# zenproxy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml  merge-dev-to-main.command.md  pyproject.toml
.github/workflows/: docker.yml
deploy/: install.sh
docker/client/: .env  Dockerfile  docker-compose-remote.yml  docker-compose.yml
docker/client/config/: config.json
docker/server/: .env  Dockerfile  docker-compose-remote.yml  docker-compose.yml
docker/server/config/: config.toml
docs/: INTENT.md  SPEC.md  WORKFLOW.md
docs/_templates/: AGENTS.example.md  CLAUDE.example.md  INTENT.example.md  SPEC.example.md  WORKFLOW.example.md
docs/archive/: v035_plan.md
docs/dev_notes/: DEV_NOTES.WORKFLOW.md  DEV_NOTES_WORKFLOW_COMMAND.md
docs/dev_notes/v0.3.1/: design.md  plan.md  summary.md  task.md
docs/dev_notes/v0.3.2/: design.md  pitfalls.md  summary.md
docs/dev_notes/v0.33/: design.md  plan.md  summary.md
docs/dev_notes/v0.34/: design.md  plan.md  summary.md
docs/dev_notes/v0.35/: design.md  plan.md  summary.md  task01.md  task02.md  task03.md  task04.md  task05.md  (+3 more)
src/: config.rs  db.rs  error.rs  main.rs
src/api/: admin.rs  auth.rs  client_fetch.rs  fetch.rs  mod.rs  relay.rs  subscription.rs
src/parser/: base64.rs  clash.rs  mod.rs  plain.rs  v2ray.rs
src/pool/: manager.rs  mod.rs  validator.rs
src/quality/: checker.rs
src/singbox/: config.rs  process.rs
src/web/: admin.html  docs.html  user.html
tests/examples/: README.md
tests/smoke/: client_check.py
tests/ui/: test_admin_workspace.py
(+27 files in other folders)
